# Simple-Sanitized-Rust-Task-Manager

./: Cargo.toml  readme.md
src/: cli.rs  config.rs  controller.rs  main.rs  service_watcher.rs
